# microservice6

./: Dockerfile  Dockerfile.test  Prompt_IA.md  README.md  docker-compose.yml  read_me.md
.github/workflows/: ci_ms6.yml  ci_ms6.yml.md
analyse_apres/: snyk-dependencies.txt  tests.xml
analyse_avant/: snyk-code-cli.txt  snyk-code.txt  snyk-dependencies-cli.txt  snyk-dependencies.txt
project/: .flake8  main.py  pyproject.toml  sonar-project.properties
project/database/: db_ms6.sql
project/src/project/: config.py  main.py
project/src/project/controllers/: second_degre_controller.py  validator_controller.py
project/src/project/domains/: second_degre.py  validator.py
project/src/project/dtos/: second_degre_dto.py  validator_dto.py
project/src/project/repositories/: database.py  models.py  sensor.py
project/tests/fonctionnel/: test_validate_functionnel.py
project/tests/integration/: test_api_second_degre.py  test_api_validate_integration.py
project/tests/unitaire/: test_config.py  test_dtos.py  test_second_degre.py  test_validator_unit.py
rapport_tests/: tests.xml
