[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Lee-Rudy",email = "120602756+Lee-Rudy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.1",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
httpx = "^0.27"
requests = "^2.31.0"
flake8 = "^7.3.0"

[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
